# invasion-Ne

./: .gitignore  .gitmodules  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  Snakefile  calcua.sh  conda_environment.yaml  data_manifest.yml  pixi.toml
manuscript/notebooks/: 01-sympy_invasion_ne-Copy1.ipynb  02-sympy_invasion_carrying_capacity.ipynb
manuscript/poster/: main.typ  methods_comparison.ipynb  multiple_introductions.ipynb  pyproject.toml
manuscript/poster/scripts/: 01-estimate_error.jl  02-parametric_points.jl  03-coverage.jl
simulations/: constant_demography.csv  constant_demography.yaml  invasion_demography.csv  invasion_demography.yaml
src/: constant_demography.py  ibd_arg.py  invasion_demography.py  overlay_mutations.py  plink_genetic_map.py  population_size_trajectory.py  region_file.py  run_msprime.py  shapeit_genetic_map.py  singer_ne.py
src/msprime/: flowerhorn_simulation.py
src/pymc/: constant_population_nuts.py  constant_population_piecewise_nuts.py  exponential_piecewise_bayesbag.py  exponential_piecewise_nuts.py  exponential_piecewise_nuts_boot.py  exponential_piecewise_nuts_boot_approx.py  exponential_piecewise_nuts_contig.py  exponential_piecewise_nuts_contig_informed_prior.py
src/slim/: constant_recent_past.py  exponential_growth.py  flowerhorn_simulation.py  slimwrap.py
src/utils/: ballpark_ne.py  plink_map.py  tskit_vcf_export.py
workflow/: Snakefile  flowerhorn.smk
workflow/plots/: exponential_growth_methods.jl  flowerhorn_methods.jl  posterior_predictive_check.jl
workflow/rules/: gone2.smk  hapne.smk  (+2 more)
(+4 files in other folders)
