[project]
name = "poster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.22.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "pymc>=5.12.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = [
    "phasegen",
    "multiple_introductions",
]
